--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <a href="#!" class="navbar--link">Главная</a>
                 <a href="#!" class="navbar--link">О компании</a>
                 <a href="#!" class="navbar--link">Блог</a>
-                <a href="#!" class="navbar--link">Услуги</a>
-                <a href="#!" class="navbar--link">Контакты</a>
+                <a href="page2.html" class="navbar--link">Услуги</a>
+                <a href="page3.html" class="navbar--link">Контакты</a>
             </div>
         </div>
     </div>
