--- a/page2.html
+++ b/page2.html
@@ -32,7 +32,7 @@
                 <a href="#!" class="navbar--link">Главная</a>
                 <a href="#!" class="navbar--link">О компании</a>
                 <a href="#!" class="navbar--link">Блог</a>
-                <a href="#!" class="navbar--link">Услуги</a>
+                <a href="page3.html" class="navbar--link">Услуги</a>
                 <a href="#!" class="navbar--link">Контакты</a>
             </div>
         </div>
