--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-
+    
     <!-- NAVBAR -->
     <div class="navbar--1">
         <div class="navbar1 container">
@@ -19,13 +19,26 @@
                 <span class="phone"></span>
                 <span class="paper--plane"></span>
             </div>
+            <ul class="navbar-list">
+                <li><a href="#!" class="navbar-link">+7 (495) 507-96-49</a></li>
+                <li><a href="#!" class="navbar-link">отправить сообщение</a></li>
+                <!-- <li><a href="#!" class="navbar-link"></a></li> -->
+                <li><a href="#!" class="navbar-link"><span class="phone"></span></a></li>
+                <li><a href="#!" class="navbar-link"><span class="paper--plane"></span></a></li>
+                <li><a href="#!" class="navbar-link">Главная</a></li>
+                <li><a href="#!" class="navbar-link">О компании</a></li>
+                <li><a href="#!" class="navbar-link">Блог</a></li>
+                <li><a href="#!" class="navbar-link">Услуги</a></li>
+                <li><a href="#!" class="navbar-link">Контакты</a></li>
+            </ul>
             <div class="navbar-burger">
-                <span></span>
-                <span></span>
-                <span></span>
+                <span class="navbarSpan"></span>
+                <span class="navbarSpan"></span>
+                <span class="navbarSpan"></span>
             </div>
         </div>
     </div>
+    
 
     <nav class="navbar--2">
         <div class="navbar container">
@@ -413,44 +426,41 @@
     <footer class="footer">
         <div class="footer-content container">
             <ul class="foot-navbar-list1">
-                <li class="foot-link">О КОМПАНИИ</li>
-                <li class="foot-link">БЛОГ</li>
-                <li class="foot-link">ЗАПЧАСТИ</li>
-                <li class="foot-link">ГАРАНТИЯ</li>
-                <li class="foot-link">ЗАПИСЬ</li>
-                <li class="foot-link">КОНТАКТЫ</li>
+                <li class="foot-link"><a href="#!" class="foot-link">О КОМПАНИИ</a></li>
+                <li class="foot-link"><a href="#!" class="foot-link">БЛОГ</a></li>
+                <li class="foot-link"><a href="#!" class="foot-link">ЗАПЧАСТИ</a></li>
+                <li class="foot-link"><a href="#!" class="foot-link">ГАРАНТИЯ</a></li>
+                <li class="foot-link"><a href="#!" class="foot-link">ЗАПИСЬ</a></li>
+                <li class="foot-link"><a href="#!" class="foot-link">КОНТАКТЫ</a></li>
             </ul>
             <div class="footer-box1">
                 <h4 class="foot-title">УСЛУГИ</h4>
-                <div class="foot-line">
-                    <span></span>
-                </div>
                 <div class="foot-inner-box">
                     <ul class="foot-link-box1">
-                        <li class="foot-inner-link">Техобслуживание</li>
-                        <li class="foot-inner-link">Компьютерная диагностика</li>
-                        <li class="foot-inner-link">Ремонт АКПП Мазда</li>
-                        <li class="foot-inner-link">Ремонт двигателя</li>
-                        <li class="foot-inner-link">Ремонт электрики</li>
-                        <li class="foot-inner-link">Ремонт системы охлаждения</li>
-                        <li class="foot-inner-link">Ремонт выхлопной системы</li>
+                        <li class="foot-inner-link"><a href="#!" class="foot-inner-link">Техобслуживание</a></li>
+                        <li class="foot-inner-link"><a href="#!" class="foot-inner-link">Компьютерная диагностика</a></li>
+                        <li class="foot-inner-link"><a href="#!" class="foot-inner-link">Ремонт АКПП Мазда</a></li>
+                        <li class="foot-inner-link"><a href="#!" class="foot-inner-link">Ремонт двигателя</a></li>
+                        <li class="foot-inner-link"><a href="#!" class="foot-inner-link">Ремонт электрики</a></li>
+                        <li class="foot-inner-link"><a href="#!" class="foot-inner-link">Ремонт системы охлаждения</a></li>
+                        <li class="foot-inner-link"><a href="#!" class="foot-inner-link">Ремонт выхлопной системы</a></li>
                     </ul>
                     <ul class="foot-link-box2">
-                        <li class="foot-inner-link">Замена стекол</li>
-                        <li class="foot-inner-link">Сход развал</li>
-                        <li class="foot-inner-link">Кузовной ремонт</li>
-                        <li class="foot-inner-link">Эвакуатор</li>
-                        <li class="foot-inner-link">Шиномонтаж</li>
-                        <li class="foot-inner-link">Противоугонные системы</li>
-                        <li class="foot-inner-link">Заправка и ремонт кондиционеров</li>
+                        <li class="foot-inner-link"><a href="#!" class="foot-inner-link">Замена стекол</a></li>
+                        <li class="foot-inner-link"><a href="#!" class="foot-inner-link">Сход развал</a></li>
+                        <li class="foot-inner-link"><a href="#!" class="foot-inner-link">Кузовной ремонт</a></li>
+                        <li class="foot-inner-link"><a href="#!" class="foot-inner-link">Эвакуатор</a></li>
+                        <li class="foot-inner-link"><a href="#!" class="foot-inner-link">Шиномонтаж</a></li>
+                        <li class="foot-inner-link"><a href="#!" class="foot-inner-link">Противоугонные системы</a></li>
+                        <li class="foot-inner-link"><a href="#!" class="foot-inner-link">Заправка и ремонт кондиционеров</a></li>
                     </ul>
                 </div>
             </div>
             <div class="footer-box2">
                 <div class="foot-box2-inner-box">
-                    <p class="foot-num">+7 (495) 507-96-49</p>
-                    <span class="footer-paper--plane"></span>
-                    <span class="footer-phone"></span>
+                    <a href="#!" class="foot-num">+7 (495) 507-96-49</a>
+                    <a href="#!"><span class="footer-paper--plane"></span></a>
+                    <a href="#!"><span class="footer-phone"></span></a>
                 </div>
                 <div class="foot-line2">
                     <span></span>
