--- a/page2.html
+++ b/page2.html
@@ -19,6 +19,17 @@
                 <span class="phone"></span>
                 <span class="paper--plane"></span>
             </div>
+            <ul class="navbar-list">
+                <li><a href="#!" class="navbar-link">+7 (495) 507-96-49</a></li>
+                <li><a href="#!" class="navbar-link">отправить сообщение</a></li>
+                <li><a href="#!" class="navbar-link"><span class="phone"></span></a></li>
+                <li><a href="#!" class="navbar-link"><span class="paper--plane"></span></a></li>
+                <li><a href="index.html" class="navbar-link">Главная</a></li>
+                <li><a href="#!" class="navbar-link">О компании</a></li>
+                <li><a href="#!" class="navbar-link">Блог</a></li>
+                <li><a href="page3.html" class="navbar-link">Услуги</a></li>
+                <li><a href="#!" class="navbar-link">Контакты</a></li>
+            </ul>
             <div class="navbar-burger">
                 <span class="navbarSpan"></span>
                 <span class="navbarSpan"></span>
@@ -30,10 +41,10 @@
     <nav class="navbar--2">
         <div class="navbar container">
             <ul class="navbar--list">
-                <li><a href="#!" class="navbar--link">Главная</a></li>
+                <li><a href="index.html" class="navbar--link">Главная</a></li>
                 <li><a href="#!" class="navbar--link">О компании</a></li>
                 <li><a href="#!" class="navbar--link">Блог</a></li>
-                <li><a href="page2.html" class="navbar--link">Услуги</a></li>
+                <li><a href="page3.html" class="navbar--link">Услуги</a></li>
                 <li><a href="#!" class="navbar--link">Контакты</a></li>
             </ul>
         </div>
