--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
             <ul class="navbar-list">
                 <li><a href="#!" class="navbar-link">+7 (495) 507-96-49</a></li>
                 <li><a href="#!" class="navbar-link">отправить сообщение</a></li>
-                <!-- <li><a href="#!" class="navbar-link"></a></li> -->
                 <li><a href="#!" class="navbar-link"><span class="phone"></span></a></li>
                 <li><a href="#!" class="navbar-link"><span class="paper--plane"></span></a></li>
-                <li><a href="#!" class="navbar-link">Главная</a></li>
+                <li><a href="index.html" class="navbar-link">Главная</a></li>
                 <li><a href="#!" class="navbar-link">О компании</a></li>
                 <li><a href="#!" class="navbar-link">Блог</a></li>
-                <li><a href="#!" class="navbar-link">Услуги</a></li>
+                <li><a href="page2.html" class="navbar-link">Услуги</a></li>
                 <li><a href="#!" class="navbar-link">Контакты</a></li>
             </ul>
             <div class="navbar-burger">
@@ -43,7 +42,7 @@
     <nav class="navbar--2">
         <div class="navbar container">
             <ul class="navbar--list">
-                <li><a href="#!" class="navbar--link">Главная</a></li>
+                <li><a href="index.html" class="navbar--link">Главная</a></li>
                 <li><a href="#!" class="navbar--link">О компании</a></li>
                 <li><a href="#!" class="navbar--link">Блог</a></li>
                 <li><a href="page2.html" class="navbar--link">Услуги</a></li>
